src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-ofT-b-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen floating: true\nborder on\nwant fullscreen: AU"
expression: snapshot
---
initial configure:
size: 0 × 0, bounds: 1272 × 712, states: []

post-map configures:
size: 0 × 0, bounds: 1272 × 712, states: []
size: 1 × 1, bounds: 1272 × 712, states: [Activated]
